--- a/styles/sidebar-toolbar.less
+++ b/styles/sidebar-toolbar.less
@@ -7,6 +7,10 @@
 	border: none;
 }
 
+body.platform-linux .sheet-toolbar-container {
+	background: @messagelist;
+}
+
 //------------------------------------------------------------
 // Sidebar toolbar
 //------------------------------------------------------------
