Fix send button in new message popup window (commit #2)

--- a/styles/message-draft.less
+++ b/styles/message-draft.less
@@ -213,7 +213,8 @@
 //------------------------------------------------------------
 // Draft message footer send button
 //------------------------------------------------------------
-#message-list .message-item-wrap.draft {
+#message-list .message-item-wrap.draft,
+.composer-inner-wrap {
 	.composer-action-bar-content {
 		.btn-send {
 			background: none;
