Rename color variable

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -7,7 +7,7 @@
 
 @base-text: #231f20;
 
-@sidebar: #353945;
+@colorSidebarBg: #353945;
 @sidebar-hover: #515560;
 @sidebar-text: #b7c0cb;
 @sidebar-text-active: #ffffff;
