--- a/styles/theme-colors.less
+++ b/styles/theme-colors.less
@@ -4,4 +4,4 @@
 @text-color:								@base-text;
 @component-active-color:		@accent;
 @toolbar-background-color:	@threadlist;
-@panel-background-color:		@sidebar;
+@panel-background-color:		@colorSidebarBg;
