Tweak sidebar item hover color

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -8,12 +8,12 @@
 @base-text: #231f20;
 
 @colorSidebarBg: #353945;
-@sidebar-hover: #515560;
+@colorSidebarHover: rgba(186, 195, 207, 0.15);
 @sidebar-text: #b7c0cb;
 @sidebar-text-active: #ffffff;
 
 @threadlist: #ffffff;
-@threadlist-hover: tint(@sidebar, 90%);
+@threadlist-hover: tint(@colorSidebarBg, 90%);
 @threadlist-text-active: #ffffff;
 
 @messagelist: #f5f6f7;
