Rename color variables

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -1,14 +1,14 @@
 //------------------------------------------------------------
 // Color variables
 //------------------------------------------------------------
-@accent: #5294e2;
+@colorAccent: #5294e2;
 
 @border-medium: #dcdfe3;
 
 @base-text: #231f20;
 
 @colorSidebarBg: #353945;
-@colorSidebarHover: rgba(186, 195, 207, 0.15);
+@colorSidebarItemHover: rgba(186, 195, 207, 0.15);
 @sidebar-text: #b7c0cb;
 @sidebar-text-active: #ffffff;
 
@@ -21,8 +21,8 @@
 
 @btn-bg-hover: lighten(@messagelist, 15%);
 @btn-border-hover: #dddfe4;
-@btn-bg-active: @accent;
-@btn-border-active: @accent;
+@btn-bg-active: @colorAccent;
+@btn-border-active: @colorAccent;
 @btn-icon-active: #ffffff;
 
 @default-btn-bg: #4dadd4;
