--- a/styles/contact-sidebar.less
+++ b/styles/contact-sidebar.less
@@ -66,7 +66,7 @@
 	.toggle {
 		padding: 6px 15px 8px;
 		font-size: 13px;
-		color: @accent;
+		color: @colorAccent;
 
 		&:hover {
 			cursor: pointer;
