--- a/styles/draftlist.less
+++ b/styles/draftlist.less
@@ -33,12 +33,12 @@
 
 	&.selected {
 		.checkmark .inner {
-			background-color: @accent;
+			background-color: @colorAccent;
 		}
 	}
 
 	&.keyboard-cursor {
-		border-left-color: @accent;
+		border-left-color: @colorAccent;
 	}
 }
 
