--- a/styles/preferences.less
+++ b/styles/preferences.less
@@ -112,10 +112,10 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 //---------------------------------
 .preferences-wrap .platform-note {
 	background-color: darken(@prefs, 5%);
-	border-color: @accent;
+	border-color: @colorAccent;
 
 	&::before {
-		color: @accent;
+		color: @colorAccent;
 	}
 }
 
@@ -158,8 +158,8 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 		background-repeat: no-repeat;
 		background-size: 11px 8px;
 		background-position: center;
-		background-color: @accent;
-		border-color: @accent;
+		background-color: @colorAccent;
+		border-color: @colorAccent;
 	}
 }
 
@@ -174,7 +174,7 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 // Accounts/Signatures tab
 //------------------------------------------------------------
 .nylas-editable-list .items-wrapper .selected.editing, .nylas-editable-list:focus .items-wrapper .selected {
-	background-color: @accent;
+	background-color: @colorAccent;
 }
 
 //------------------------------------------------------------
@@ -191,11 +191,11 @@ body.platform-linux .sheet-toolbar-container[data-id="Preferences"] {
 	}
 
 	&.active {
-		border: 1px solid @accent;
-		color: @accent;
+		border: 1px solid @colorAccent;
+		color: @colorAccent;
 
 		img.content-mask {
-			background-color: @accent;
+			background-color: @colorAccent;
 		}
 	}
 }
