--- a/styles/sidebar-toolbar.less
+++ b/styles/sidebar-toolbar.less
@@ -87,10 +87,10 @@ body.platform-linux .sheet-toolbar-container {
 		}
 
 		&.unread {
-			background-color: @accent;
+			background-color: @colorAccent;
 
 			&:hover {
-				background-color: @accent;
+				background-color: @colorAccent;
 			}
 		}
 	}
@@ -99,7 +99,7 @@ body.platform-linux .sheet-toolbar-container {
 	// Activity unread count
 	//---------------------------------
 	.unread-count.active {
-		background: @accent;
+		background: @colorAccent;
 		font-weight: 600;
 		padding-top: 1px;
 	}
@@ -124,7 +124,7 @@ body.platform-linux .sheet-toolbar-container {
 
 		&.unread,
 		&.unread:hover {
-			background-color: @accent;
+			background-color: @colorAccent;
 			color: @threadlist-text-active;
 
 			.timestamp {
