--- a/styles/theme-colors.less
+++ b/styles/theme-colors.less
@@ -2,6 +2,6 @@
 
 @background-secondary:			@messagelist;
 @text-color:								@base-text;
-@component-active-color:		@accent;
+@component-active-color:		@colorAccent;
 @toolbar-background-color:	@threadlist;
 @panel-background-color:		@colorSidebarBg;
