--- a/styles/threadlist-toolbar.less
+++ b/styles/threadlist-toolbar.less
@@ -24,7 +24,7 @@
 			color: fade(@base-text, 50%);
 
 			&.selected {
-				background-color: @accent;
+				background-color: @colorAccent;
 			}
 
 			&:hover:not(.selected) {
@@ -32,7 +32,7 @@
 			}
 
 			.suggestion-token {
-				color: @accent;
+				color: @colorAccent;
 			}
 		}
 
