--- a/styles/theme-selector.less
+++ b/styles/theme-selector.less
@@ -8,7 +8,7 @@
 	// Create theme link
 	//---------------------------------
 	.create-theme a {
-		color: @accent !important;
+		color: @colorAccent !important;
 		cursor: pointer;
 	}
 }
