--- a/styles/threadlist.less
+++ b/styles/threadlist.less
@@ -13,7 +13,7 @@
 
 	&.focused,
 	&.selected {
-		background-color: @accent !important;
+		background-color: @colorAccent !important;
 	}
 
 	&.unread {
@@ -24,7 +24,7 @@
 	}
 
 	&.keyboard-cursor {
-		border-left-color: darken(@accent, 15%);
+		border-left-color: darken(@colorAccent, 15%);
 	}
 
 	body.is-blurred & {
