Rename more color variables

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -9,8 +9,8 @@
 
 @colorSidebarBg: #353945;
 @colorSidebarItemHover: rgba(186, 195, 207, 0.15);
-@sidebar-text: #b7c0cb;
-@sidebar-text-active: #ffffff;
+@colorSidebarText: #b7c0cb;
+@colorSidebarTextActive: #ffffff;
 
 @threadlist: #ffffff;
 @threadlist-hover: tint(@colorSidebarBg, 90%);
