--- a/styles/sidebar.less
+++ b/styles/sidebar.less
@@ -20,7 +20,7 @@
 		font-size: 13px;
 		text-transform: uppercase;
 		letter-spacing: 2px;
-		color: fade(@sidebar-text, 50%);
+		color: fade(@colorSidebarText, 50%);
 		margin-bottom: 7px;
 		padding-top: 0px;
 	}
@@ -31,7 +31,7 @@
 
 	.add-item-button {
 		img.content-mask {
-			background-color: fade(@sidebar-text, 50%);
+			background-color: fade(@colorSidebarText, 50%);
 			margin-top: 4px;
 		}
 	}
@@ -49,7 +49,7 @@
 	img.content-dark {
 		zoom: 1 !important;
 		background-image: none;
-		background-color: fade(@sidebar-text, 65%);
+		background-color: fade(@colorSidebarText, 65%);
 		-webkit-mask-repeat: no-repeat;
 		-webkit-mask-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="6" viewBox="0 0 10 6"><path fill="#FFF" d="M0 0h1l4 4 4-4h1v1L5 6 0 1z"/></svg>');
 		transform: none;
@@ -59,7 +59,7 @@
 		cursor: pointer;
 
 		img.content-dark {
-			background-color: fade(@sidebar-text-active, 85%);
+			background-color: fade(@colorSidebarTextActive, 85%);
 		}
 	}
 }
@@ -74,10 +74,10 @@
 	.item {
 		font-size: 14px;
 		font-weight: 500;
-		color: @sidebar-text;
+		color: @colorSidebarText;
 
 		img.content-mask {
-			background-color: @sidebar-text;
+			background-color: @colorSidebarText;
 			margin-top: -1px;
 			margin-bottom: 1px;
 			margin-left: 16px;
@@ -89,10 +89,10 @@
 
 		&.selected {
 			background-color: @colorAccent;
-			color: @sidebar-text-active;
+			color: @colorSidebarTextActive;
 
 			img.content-mask {
-				background-color: @sidebar-text-active;
+				background-color: @colorSidebarTextActive;
 			}
 		}
 	}
@@ -105,10 +105,10 @@
 
 		.item {
 			background-color: @colorAccent;
-			color: @sidebar-text-active;
+			color: @colorSidebarTextActive;
 
 			img.content-mask {
-				background-color: @sidebar-text-active;
+				background-color: @colorSidebarTextActive;
 			}
 		}
 	}
@@ -121,21 +121,21 @@
 	.item-count-box {
 		box-shadow: none;
 		background-color: @colorAccent;
-		color: @sidebar-text-active;
+		color: @colorSidebarTextActive;
 
 		&.alt-count {
 			background-color: @colorAccent;
-			color: @sidebar-text-active;
+			color: @colorSidebarTextActive;
 		}
 	}
 
 	&.selected {
 		.item-count-box {
-			background-color: fade(@sidebar-text-active, 90%);
+			background-color: fade(@colorSidebarTextActive, 90%);
 			color: @colorAccent;
 
 			&.alt-count {
-				background-color: fade(@sidebar-text-active, 90%);
+				background-color: fade(@colorSidebarTextActive, 90%);
 				color: @colorAccent;
 			}
 		}
@@ -146,7 +146,7 @@
 // Folder expand/collapse arrows
 //------------------------------------------------------------
 .disclosure-triangle.visible div {
-	border-left-color: fade(@sidebar-text, 40%);
+	border-left-color: fade(@colorSidebarText, 40%);
 }
 
 //------------------------------------------------------------
@@ -156,14 +156,14 @@
 	background-color: darken(@colorSidebarBg, 5%);;
 	box-shadow: none;
 	font-weight: 500;
-  color: lighten(@sidebar-text, 5%);
+  color: lighten(@colorSidebarText, 5%);
 
 	//---------------------------------
 	// Task count label
 	//---------------------------------
 	.item .count {
 		font-weight: 500;
-	  color: lighten(@sidebar-text, 5%);
+	  color: lighten(@colorSidebarText, 5%);
 	}
 
 	//---------------------------------
@@ -179,7 +179,7 @@
 	//---------------------------------
 	.item h2 {
 		font-weight: 600;
-		color: darken(@sidebar-text, 15%);
+		color: darken(@colorSidebarText, 15%);
 		margin: 6px 0px 12px;
 	}
 
@@ -208,7 +208,7 @@
 	// Progress labels
 	//---------------------------------
 	.item .sync-activity .account .folder-progress .progress-label {
-		color: darken(@sidebar-text, 25%);
+		color: darken(@colorSidebarText, 25%);
 	}
 }
 
