Tweak sidebar text/icon colors to better match Arc

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -9,7 +9,9 @@
 
 @colorSidebarBg: #353945;
 @colorSidebarItemHover: rgba(186, 195, 207, 0.15);
-@colorSidebarText: #b7c0cb;
+@colorSidebarText: #bac3cf;
+@colorSidebarTextDarker: fade(@colorSidebarText, 50%);
+@colorSidebarTextLighter: lighten(@colorSidebarText, 5%);
 @colorSidebarTextActive: #ffffff;
 
 @threadlist: #ffffff;
