Rename more color variables

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -42,5 +42,5 @@
 
 @check-border: #a6adbc;
 
-@warning-red: #ed304b;
-@warning-yellow: #ed8830;
+@colorWarningRed: #ed304b;
+@colorWarningYellow: #ed8830;
