--- a/styles/message-draft.less
+++ b/styles/message-draft.less
@@ -33,15 +33,15 @@
 		// Invalid recipient token
 		//---------------------------------
 		&.invalid {
-			color: @warning-red;
+			color: @colorWarningRed;
 
 			img.content-mask {
-				background-color: @warning-red;
+				background-color: @colorWarningRed;
 			}
 
 			&.selected {
-				background-color: fade(@warning-red, 80%);
-				border-color: @warning-red;
+				background-color: fade(@colorWarningRed, 80%);
+				border-color: @colorWarningRed;
 				color: white;
 
 				img.content-mask {
@@ -50,7 +50,7 @@
 			}
 
 			&.selected:hover {
-				background: @warning-red;
+				background: @colorWarningRed;
 			}
 		}
 	}
