--- a/styles/sidebar.less
+++ b/styles/sidebar.less
@@ -235,18 +235,18 @@
 	}
 
 	&.error {
-		background: @warning-red;
+		background: @colorWarningRed;
 
 		.action:hover {
-			background: darken(@warning-red, 10%);
+			background: darken(@colorWarningRed, 10%);
 		}
 	}
 
 	&.offline {
-		background: @warning-yellow;
+		background: @colorWarningYellow;
 
 		.action:hover {
-			background: darken(@warning-yellow, 10%);
+			background: darken(@colorWarningYellow, 10%);
 		}
 	}
 }
