Tweak sidebar toolbar text/icon color to better match Arc

--- a/styles/arc-variables.less
+++ b/styles/arc-variables.less
@@ -3,6 +3,10 @@
 //------------------------------------------------------------
 @colorAccent: #5294e2;
 
+@colorWindowBg: #f6f7f8;
+@colorBorder: #d4d5db;
+@colorText: #231f20;
+
 @border-medium: #dcdfe3;
 
 @base-text: #231f20;
@@ -13,6 +17,20 @@
 @colorSidebarTextDarker: fade(@colorSidebarText, 50%);
 @colorSidebarTextLighter: lighten(@colorSidebarText, 5%);
 @colorSidebarTextActive: #ffffff;
+
+@colorMenuBg: #ffffff;
+@colorMenuItemHover: tint(@colorSidebarBg, 90%);
+@colorMenuText: @colorText;
+@colorMenuTextActive: #ffffff;
+
+@colorBtnBgDark: #505666;
+@colorBtnBorderDark: #2b2e39;
+@colorBtnBgActiveDark: @colorAccent;
+@colorBtnBorderActiveDark: #2b2e39;
+
+@colorBtnTextActive: #ffffff;
+
+
 
 @threadlist: #ffffff;
 @threadlist-hover: tint(@colorSidebarBg, 90%);
